# ai-github-reviewer

./: .ai-reviewer.yml  .env.example  .gitattributes  .gitignore  Dockerfile  LICENSE  README.md  alembic.ini  docker-compose.yml  pyproject.toml  render.yaml
action/: __init__.py  action.yml  entrypoint.py
app/: __init__.py  config.py  config_schema.py  main.py  reviewer.py  store.py  webhook.py
app/api/: __init__.py  routes.py
app/db/: models.py  session.py
app/db/migrations/: env.py
app/db/migrations/versions/: 75059376dbb8_initial_schema.py
app/github/: __init__.py  auth.py  client.py  comments.py  diff.py
app/review/: __init__.py  context.py  engine.py  llm.py  schema.py
app/review/passes/: __init__.py  base.py  correctness.py  security.py  style.py  tests.py
docs/: example-review.md
eval/: __init__.py  heuristics.py  metrics.py  run_eval.py
eval/benchmark/: clean_no_issues.yml  correctness_bare_except.yml  correctness_none_check.yml  security_hardcoded_and_eval.yml  security_sql_injection.yml
examples/: ai-review.yml
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  api.ts  index.css  ui.tsx
frontend/src/pages/: Dashboard.tsx  Eval.tsx  Repos.tsx  ReviewDetail.tsx  Reviews.tsx
tests/: conftest.py
tests/integration/: test_review_cycle.py  test_webhook.py
tests/unit/: test_comment_mapping.py  test_config.py  test_diff_parser.py  test_eval_metrics.py  test_github_auth.py  test_health.py  test_review_engine.py
